[kbss-cvut/termit-ui#461] Optimize persisting of term occurrences when there are already existing ones.
Instead of dropping the context immediately, which slows down other concurrent activities, move the context to a different URI (much faster) and use a scheduled service to drop such contexts at night.